--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <!-- Main Start -->
     <main>
 
+
+
         <!-- About Us Section Start -->
 
         <section class="about-us-home-2">
@@ -104,6 +106,8 @@
         <!-- About Us Section End -->
 
         <!-- Our Team Section Start -->
+
+
 
         <section class="our-team-section">
             <div class="container py-120">
@@ -951,7 +955,7 @@
 
         <!-- Latest News Posts Section Start -->
 
-        <section class="latest-news-section py-120">
+        <section class="latest-news-section pt-120 pb-250">
             <div class="container">
                 <div class="row">
                     <div class="latest-news-heading">
@@ -1154,6 +1158,8 @@
             </div>
         </section>
 
+        <div class="spacer py-120"></div>
+
         <!-- Latest News Posts Section End -->
 
     </main>
@@ -1161,6 +1167,137 @@
 
     <!-- Footer Start -->
     <footer>
+
+        <div class="container">
+            <div class="row">
+                <div class="d-col-wrapper">
+                    <div class="ds-col ds-col-1">
+                        <div class="newsletter">
+                            <div class="site-logo">
+                                <img src="./assets/img/site-img/dr-driving-site-logo.png" alt="">
+                            </div>
+                            <div class="site-newsletter">
+                                <p>
+                                    Join Our Newsletter to stay up to date on features and releases. of Storytelling.
+                                </p>
+                            </div>
+                            <div class="newsletter-mail">
+                                <input type="email" placeholder="Enter your email">
+                                <a href="#" class="send-newsletter-mail">
+                                    Subscribe
+                                </a>
+                            </div>
+                        </div>
+                        <div class="footer-1-spacer"></div>
+                        <div class="contact-social-info">
+                            <div class="req-demo">
+                                <p>
+                                    Email us on demo.provide@gmail.com or submit an contact form.
+                                </p>
+                            </div>
+                            <div class="social-links">
+                                <a href="#" class="social-link">
+                                    <i class="ri-twitter-x-line"></i>
+                                </a>
+                                <a href="#" class="social-link">
+                                    <i class="ri-instagram-line"></i>
+                                </a>
+                                <a href="#" class="social-link">
+                                    <i class="ri-linkedin-fill"></i>
+                                </a>
+                                <a href="#" class="social-link">
+                                    <i class="ri-facebook-fill"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ds-col">
+
+                        <div class="links-wrapper">
+                            <h3 class="footer-title">
+                                Main&nbsp;Pages
+                            </h3>
+                            <a href="#" class="footer-page-link">
+                                Home 1
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Home 2
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                About Us
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Pricing
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Contact
+                            </a>
+                        </div>
+                    </div>
+                    <div class="ds-col ds-col-3">
+                        <div class="top-links">
+                            <h3 class="footer-title">
+                                Company
+                            </h3>
+                            <a href="#" class="footer-page-link">
+                                Blogs
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Blog Single
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Pricing Single
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Career
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Career Single
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Team Single
+                            </a>
+                        </div>
+                        <div class="spacer-70"></div>
+                        <div class="footer-address">
+                            <div class="footer-pn">
+                                Phone: (808) 555-0111
+                            </div>
+                            <div class="footer-ad">
+                                3891 Ranchview Dr. Richardson, California 62639
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ds-col ds-col-4">
+                        <div class="top-links">
+                            <h3 class="footer-title">
+                                Essential Links
+                            </h3>
+                            <a href="#" class="footer-page-link">
+                                Top Courses
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Driving License
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Our Instructors
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Latest News
+                            </a>
+                            <a href="#" class="footer-page-link">
+                                Contact
+                            </a>
+                        </div>
+                        <div class="spacer-130"></div>
+                        <div class="footer-copyright">
+                            &copy; 2025 Copyright - ProDrive | Designed by "ZoDevs"
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </footer>
     <!-- Footer End -->
