FIxed Footer gto make Pixel Perfect!

--- a/index.html
+++ b/index.html
@@ -1158,21 +1158,65 @@
             </div>
         </section>
 
-        <div class="spacer py-120"></div>
+        <!-- <div class="spacer py-120"></div> -->
 
         <!-- Latest News Posts Section End -->
+
+        <!-- package and courses section starts -->
+
+        <section class="course-package-section py-120">
+            <div class="container course-package-main-area">
+                <div class="row">
+                    <div class="course-content-columns">
+                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                            <h2 class="course-sec-title">
+                                We Help Students Pass Driving Test on Their First Try.
+                            </h2>
+                            <div class="course-sec-quote">
+                                There are certain attributes of professionals and one has to catch hold of them in order
+                                to work efficiently and grow business.
+                            </div>
+                            <div class="navigation-buttons">
+                                <div class="package-button">
+                                    <a href="#" class="pkg-btn">
+                                        View Package
+                                    </a>
+                                </div>
+                                <div class="start-course-button">
+                                    <a href="#" class="start-course-btn">
+                                        Start Course
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                            <div class="course-package-sec-imgs">
+                                <div class="img-1-wrapper">
+                                    <img src="./assets/img/course-home-2/image_2025-09-07_15-56-51.png" alt="">
+                                </div>
+                                <div class="img-2-wrapper">
+                                    <img src="./assets/img/course-home-2/car-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- package and courses section ends -->
 
     </main>
     <!-- Main End -->
 
     <!-- Footer Start -->
     <footer>
-
         <div class="container">
             <div class="row">
                 <div class="d-col-wrapper">
+                    <!-- used custom colunm because it has different sizes and col-xl or col-md have fixed sizes -->
                     <div class="ds-col ds-col-1">
-                        <div class="newsletter">
+                        <div class="site-newsletter">
                             <div class="site-logo">
                                 <img src="./assets/img/site-img/dr-driving-site-logo.png" alt="">
                             </div>
@@ -1188,7 +1232,6 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="footer-1-spacer"></div>
                         <div class="contact-social-info">
                             <div class="req-demo">
                                 <p>
@@ -1211,8 +1254,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ds-col">
-
+                    <div class="ds-col ds-col-2">
                         <div class="links-wrapper">
                             <h3 class="footer-title">
                                 Main&nbsp;Pages
@@ -1258,7 +1300,6 @@
                                 Team Single
                             </a>
                         </div>
-                        <div class="spacer-70"></div>
                         <div class="footer-address">
                             <div class="footer-pn">
                                 Phone: (808) 555-0111
@@ -1289,7 +1330,6 @@
                                 Contact
                             </a>
                         </div>
-                        <div class="spacer-130"></div>
                         <div class="footer-copyright">
                             &copy; 2025 Copyright - ProDrive | Designed by "ZoDevs"
                         </div>
