Fixed Some Design Issues!

--- a/index.html
+++ b/index.html
@@ -960,19 +960,14 @@
                 <div class="row">
                     <div class="latest-news-heading">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                            <div class="top-heading">
+                            <div class="sub-heading">
                                 <span class="icon-wrapper">
-                                    <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
-                                            fill="#FF6314" />
-                                    </svg>
+                                    <i class="ri-arrow-right-double-line"></i>
                                 </span>
                                 <p class="inline-block">Articles</p>
                             </div>
-                            <div class="second-heading">
-                                <h2 class="pb-50">
+                            <div class="heading">
+                                <h2>
                                     Latest News Posts
                                 </h2>
                             </div>
@@ -983,7 +978,7 @@
                 <div class="row">
                     <div class="latest-news-card-wrapper">
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                            <div class="latest-news-card">
+                            <div class="latest-news-card ln-card-1">
                                 <div class="latest-news-img">
                                     <img src="./assets/img/news-img/latest-news-1.png" alt="Car Drivng">
                                 </div>
@@ -1012,7 +1007,7 @@
                                                 </svg>
                                             </span>
                                             <span>
-                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                                10&NonBreakingSpace;May,&NonBreakingSpace;2025
                                             </span>
                                         </p>
                                     </div>
@@ -1040,7 +1035,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                            <div class="latest-news-card">
+                            <div class="latest-news-card  ln-card-2">
                                 <div class="latest-news-img">
                                     <img src="./assets/img/news-img/latest-news-2.png" alt="Car Drivng">
                                 </div>
@@ -1069,7 +1064,7 @@
                                                 </svg>
                                             </span>
                                             <span>
-                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                                10&NonBreakingSpace;May,&NonBreakingSpace;2025
                                             </span>
                                         </p>
                                     </div>
@@ -1097,7 +1092,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                            <div class="latest-news-card">
+                            <div class="latest-news-card  ln-card-3">
                                 <div class="latest-news-img">
                                     <img src="./assets/img/news-img/latest-news-3.png" alt="Car Drivng">
                                 </div>
@@ -1126,7 +1121,7 @@
                                                 </svg>
                                             </span>
                                             <span>
-                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                                10&NonBreakingSpace;May,&NonBreakingSpace;2025
                                             </span>
                                         </p>
                                     </div>
